<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="26sp" />

    <LinearLayout
        android:id="@+id/layout_text_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_title">


        <EditText
            android:id="@+id/text_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textSize="36sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/actions_complex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_text_result"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onOperationClick"
            android:text="@string/c"></Button>


        <Button
            android:id="@+id/btn_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onOperationClick"
            android:text="@string/sign"></Button>

        <Button
            android:id="@+id/btn_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onOperationClick"
            android:text="@string/percent"></Button>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/numbers_from_1_to_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actions_complex"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/numbers_1_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumberClick"
                android:text="@string/_1"></Button>

            <Button
                android:id="@+id/btn_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumberClick"
                android:text="@string/_2"></Button>

            <Button
                android:id="@+id/btn_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumberClick"
                android:text="@string/_3"></Button>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/numbers_4_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumberClick"
                android:text="@string/_4"></Button>

            <Button
                android:id="@+id/btn_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumberClick"
                android:text="@string/_5"></Button>


            <Button
                android:id="@+id/btn_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumberClick"
                android:text="@string/_6"></Button>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/numbers_7_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumberClick"
                android:text="@string/_7"></Button>

            <Button
                android:id="@+id/btn_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumberClick"
                android:text="@string/_8"></Button>

            <Button
                android:id="@+id/btn_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNumberClick"
                android:text="@string/_9"></Button>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/number_0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numbers_from_1_to_9"
        android:layout_toLeftOf="@id/action_decimal_point"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onNumberClick"
            android:text="@string/_0"></Button>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/action_decimal_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numbers_from_1_to_9"
        android:layout_toLeftOf="@+id/action_buttons"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_decimal_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onNumberClick"
            android:text="@string/decimal_point"></Button>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/action_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_text_result"
        android:layout_toRightOf="@+id/numbers_from_1_to_9">

        <LinearLayout
            android:id="@+id/buttons_simple_calc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_text_result"
            android:layout_toRightOf="@+id/numbers_from_1_to_9"
            android:orientation="vertical"
            android:visibility="gone">


            <Button
                android:id="@+id/btn_X"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onOperationClick"
                android:text="@string/_x"></Button>

            <Button
                android:id="@+id/btn_div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onOperationClick"
                android:text="@string/div"></Button>

            <Button
                android:id="@+id/btn_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onOperationClick"
                android:text="@string/minus"></Button>

            <Button
                android:id="@+id/btn_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onOperationClick"
                android:text="@string/plus"></Button>

            <Button
                android:id="@+id/btn_equals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onOperationClick"
                android:text="@string/equals"></Button>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons_engineering_calc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_text_result"
            android:layout_toRightOf="@+id/numbers_from_1_to_9"
            android:orientation="vertical"
            android:visibility="visible">

            <Button
                android:id="@+id/btn_sin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="sin"></Button>


            <Button
                android:id="@+id/btn_cos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="cos"></Button>


            <Button
                android:id="@+id/btn_tan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="tan"></Button>

            <Button
                android:id="@+id/btn_In"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="In"></Button>

            <Button
                android:id="@+id/btn_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="log"></Button>


        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/engineering_action_batons__part2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/number_0">

        <LinearLayout
            android:id="@+id/buttons_engineering_calc_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/engineering_action_batons__part2"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/btn_exponent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/exponent"></Button>

            <Button
                android:id="@+id/btn_pi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pi"></Button>

            <Button
                android:id="@+id/btn_opening_bracket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/opening_bracket"></Button>

            <Button
                android:id="@+id/btn_closing_bracket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/closing_bracket"></Button>

            <Button
                android:id="@+id/btn_square_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/square_root"></Button>

        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/button_engineering_calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/engineering_action_batons__part2">

        <Button
            android:id="@+id/btn_engineering_calc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_exponent"
            android:onClick="onChangeCalc"
            android:text="@string/engineering_calc_btn"></Button>

    </LinearLayout>
</RelativeLayout>